assets/css/_base.scss
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

@font-face {
  font-family: Rustico;
  src: url('../fonts/rustico.otf');
}

// Colors
$bg: #f4f2ec;
$red-normal: #9d1515;
$black-dark: #222;
$black-normal: #555;
$black-light: #aaa;

// Responsive
$container-xl: 1440px;
$container-l: 1140px;
$container-m: 960px;
$container-s: 540px;

body {
  width: 100%;
  height: 100%;
  font-family: 'Montserrat', sans-serif;
  color: $black-normal;
  font-size: 1.125rem;
  line-height: 130%;
  overflow-x: hidden;
}

// Responsividade

@mixin responsive($device) {
  @if $device == xl {
    // For resolutions upper than 1440px
    @media screen and (min-width: $container-xl) {
      @content;
    }
  } @else if $device == l {
    // For resolutions between 1140px and 1440px
    @media screen and (max-width: $container-xl) and (min-width: $container-l) {
      @content;
    }
  } @else if $device == m {
    // For resolutions beetwen 960px and 1140px
    @media screen and (max-width: $container-l) and (min-width: $container-m) {
      @content;
    }
  } @else if $device == s {
    // For resolutions less than 960px
    @media screen and (max-width: $container-m) {
      @content;
    }
  } @else if $device == xs {
    // For resolutions less than 540px
    @media screen and (max-width: $container-s) {
      @content;
    }
  }
}

.container {
  max-width: $container-xl;
  width: 95%;
  margin: 0 auto;

  // border: 1px solid red;

  @include responsive(s) {
    width: 90%;
    flex-direction: column;
    padding: 32px 0px;
  }
}

main {
  background-color: $bg;
}

img {
  max-width: 100%;
}

ul {
  list-style: none;
}

.btn {
  padding: 1rem 1.5rem;
  margin-top: 40px;
  background-color: #222;
  color: #fff;

  display: inline-flex;
  align-items: center;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  font-weight: bold;

  transition: 0.3s ease;
  img {
    margin-left: 20px;
  }
  &:hover {
    opacity: 0.7;
  }
}

%section-title {
  font-family: 'Montserrat', sans-serif;
  font-size: 3.75rem;
  font-weight: 700;
  color: #222222;
  position: relative;
  z-index: 2;
  margin-bottom: 1rem;
  text-align: center;

  span {
    font-family: 'Rustico', sans-serif;
    font-weight: 400;
    font-size: 4.5rem;
    color: #fff;
    text-transform: uppercase;
    display: block;
    margin-bottom: -1rem;

    @include responsive(m) {
      font-size: 3.75rem;
    }
    @include responsive(s) {
      font-size: 3.5rem;
    }
    @include responsive(xs) {
      font-size: 3rem;
    }
  }

  @include responsive(m) {
    font-size: 3.25rem;
  }
  @include responsive(s) {
    font-size: 3rem;
  }
  @include responsive(xs) {
    font-size: 2.5rem;
  }
}

%section-background-title {
  margin: 0;
  width: fit-content;
  position: absolute;
  z-index: -1;
  top: 50%;
  left: 50%;
  transform: translateY(-50%) translateX(-50%);
  text-align: center;
}

%section {
  padding: 0 3.75rem;
  margin-bottom: 7.5rem;
  display: grid;
  grid-template-columns: 0.8fr 1fr;
  gap: 1.25rem;

  @include responsive(s) {
    grid-template-columns: 1fr;
    padding: 0;
    row-gap: 2rem;
    padding: 0;
  }

  .sec-txt {
    p {
      margin-bottom: 1rem;
      font-size: 1.125rem;
      line-height: 1.75rem;

      @include responsive(s) {
        font-size: 1rem;
      }

      a {
        color: inherit;
        font-weight: 400;
        color: #555555;
        transition: color 300ms ease;

        &:hover {
          color: #7e7e7e;
        }
      }
    }
  }

  .sec-img {
    display: grid;
    grid-template-columns: 0.75fr 0.8fr 0.2fr;
    grid-template-rows: repeat(2, 18.75rem) 6.25rem;
    gap: 1.5rem;

    img {
      width: 100%;
      height: 100%;
      object-fit: cover;
    }
    :first-child {
      grid-column: 1 / 2;
      grid-row: 1 / 3;
    }
    :nth-child(2) {
      grid-column: 2 / 4;
    }
    :last-child {
      grid-column: 2 / 3;
      grid-row: 2 / 4;
    }

    @include responsive(s) {
      grid-template-columns: 1fr;
      grid-template-rows: auto;

      :first-child,
      :nth-child(2),
      :last-child {
        grid-column: 1 / -1;
        display: none;
      }
      :first-child {
        display: block;
      }
    }
  }

}

